--- a/style/styles.css
+++ b/style/styles.css
@@ -1,8 +1,20 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 img {
   max-width: 100%;
+}
+p {
+  font-size: 16px;
+  line-height: 2;
 }
 .site-header {
   padding: 20px 0;
@@ -10,6 +22,11 @@ img {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
 }
 
 /* navegacion */
@@ -34,3 +51,46 @@ img {
 .main-navigation a:hover {
   background-color: #00b8e4;
 }
+
+/* /navegacion */
+
+/* Contenedores Principal */
+.main-content,
+.sidebar {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main-content {
+    width: 70%;
+    float: left;
+    padding-right: 0 60 0 0px;
+  }
+
+  .sidebar {
+    width: 30%;
+    float: right;
+    padding: 0;
+  }
+}
+/* /contendores principales */
+
+/* Entradas de Blog */
+h2 {
+  color: #00b8e4;
+  margin-bottom: 20px;
+}
+.entry {
+  margin-top: 30px;
+}
+
+.entry img {
+  display: block;
+}
+@media (min-width: 80px) {
+  .entry img {
+    width: 300px;
+    float: left;
+    margin: 0 30px 30px 0;
+  }
+}
+/* /Entradas de Blog */
